k8s/descriptors/network/mongo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: mongodb-netpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 27017
    from:
      - podSelector:
          matchLabels:
            app: profile
